// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CodeBlock > matches dark theme snapshot 1`] = `
<div>
  <div
    class="relative overflow-hidden rounded-md border border-border"
    style="background: rgb(10, 10, 11);"
  >
    <div
      class="flex items-center justify-between px-4 py-2"
      style="border-bottom: 1px solid rgb(34, 34, 34);"
    >
      <span
        class="text-xs font-medium"
        style="color: rgb(107, 114, 128);"
      >
        app/auth.ts
      </span>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-6 w-6 text-zinc-400 hover:bg-white/5 hover:text-zinc-100"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-copy h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            ry="2"
            width="14"
            x="8"
            y="8"
          />
          <path
            d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
          />
        </svg>
      </button>
    </div>
    <pre
      class="overflow-x-auto p-4"
      style="color: rgb(228, 228, 231);"
    >
      <code
        class="text-sm"
      >
        x
      </code>
    </pre>
  </div>
</div>
`;

exports[`CodeBlock > matches snapshot 1`] = `
<div>
  <div
    class="relative overflow-hidden rounded-md bg-muted"
  >
    <div
      class="flex items-center justify-between px-4 py-2 border-b"
    >
      <span
        class="text-xs font-medium text-muted-foreground"
      >
        tsx
      </span>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-6 w-6"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-copy h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            ry="2"
            width="14"
            x="8"
            y="8"
          />
          <path
            d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
          />
        </svg>
      </button>
    </div>
    <pre
      class="overflow-x-auto p-4"
    >
      <code
        class="text-sm"
      >
        x
      </code>
    </pre>
  </div>
</div>
`;
